--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "startWithNodemon": "nodemon --exec babel-node entry.js"
   },
   "dependencies": {
-    "@hapi/good": "8.2.0",
-    "@hapi/hapi": "^19.2.0",
+    "@hapi/boom": "^9.1.0",
+    "@hapi/good": "^8.2.0",
+    "@hapi/hapi": "^20.0.0",
+    "@hapi/hoek": "^9.0.4",
     "@hapi/inert": "^6.0.2",
     "@hapi/joi": "^17.1.1",
+    "@hapi/topo": "^5.0.0",
     "@hapi/vision": "^6.0.1",
     "async": "3.0.1",
     "babel-node": "0.0.1-security",
     "body-parser": "1.19.0",
-    "boom": "7.3.0",
     "cfenv": "1.2.2",
     "dotenv": "8.0.0",
     "express": "4.17.1",
@@ -28,7 +30,6 @@
     "fs": "0.0.1-security",
     "fs-extra": "8.0.1",
     "gm": "1.23.1",
-    "good": "8.1.2",
     "good-console": "8.0.0",
     "handlebars": "^4.7.6",
     "hapi-auth-bearer-token": "6.2.1",
