--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
   "dependencies": {
     "@hapi/boom": "^9.1.0",
     "@hapi/good": "^8.2.0",
+    "@hapi/good-console": "^9.0.0",
     "@hapi/hapi": "^20.0.0",
-    "@hapi/hoek": "^9.0.4",
     "@hapi/inert": "^6.0.2",
     "@hapi/joi": "^17.1.1",
-    "@hapi/topo": "^5.0.0",
     "@hapi/vision": "^6.0.1",
     "async": "3.0.1",
     "babel-node": "0.0.1-security",
@@ -30,19 +29,16 @@
     "fs": "0.0.1-security",
     "fs-extra": "8.0.1",
     "gm": "1.23.1",
-    "good-console": "8.0.0",
     "handlebars": "^4.7.6",
     "hapi-auth-bearer-token": "6.2.1",
     "hapi-swagger": "^13.1.0",
     "ibm-cos-sdk": "1.5.4",
-    "joi": "^17.2.0",
     "jsonwebtoken": "8.5.1",
     "knox": "0.9.2",
     "lodash": "^4.17.20",
     "log4js": "6.1.0",
     "md5": "2.2.1",
     "moment": "2.24.0",
-    "moment-range": "4.0.2",
     "mongoose": "^5.10.0",
     "path": "0.12.7",
     "randomstring": "1.1.5",
