--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
-    "@hapi/good": "^8.2.0",
-    "@hapi/good-console": "^9.0.0",
-    "@hapi/hapi": "^20.0.0",
-    "@hapi/inert": "^6.0.2",
-    "@hapi/joi": "^17.1.1",
+    "@hapi/good": "^9.0.1",
+    "@hapi/good-console": "^9.0.1",
+    "@hapi/hapi": "^20.0.1",
+    "@hapi/inert": "^6.0.3",
     "@hapi/vision": "^6.0.1",
     "async": "3.0.1",
     "babel-node": "0.0.1-security",
@@ -31,8 +30,9 @@
     "gm": "1.23.1",
     "handlebars": "^4.7.6",
     "hapi-auth-bearer-token": "6.2.1",
-    "hapi-swagger": "^13.1.0",
+    "hapi-swagger": "^14.0.0",
     "ibm-cos-sdk": "1.5.4",
+    "joi": "^17.2.1",
     "jsonwebtoken": "8.5.1",
     "knox": "0.9.2",
     "lodash": "^4.17.20",
