Implement Http2 and underdog

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@
 HAPI_PORT=8000
 APP_NAME='User-Onboarding-Module'
 JWT_SECRET_KEY='sUPerSeCuREKeY&^$^&$^%$^%7782348723t4872t34Ends'
+USE_HTTP2=false 
