--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,16 @@
   ],
   "plugins": [
     [
-      "@babel/plugin-proposal-class-properties"
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ],
+    [
+      "@babel/plugin-proposal-private-methods",
+      {
+        "loose": true
+      }
     ]
   ]
 }
