--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "mongoose": "^5.10.0",
     "path": "0.12.7",
     "randomstring": "1.1.5",
-    "socket.io": "2.2.0",
+    "socket.io": "^3.1.2",
     "underscore": "1.9.1",
     "validator": "11.0.0"
   },
