--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@
 HAPI_PORT=8000
 APP_NAME='User-Onboarding-Module'
 JWT_SECRET_KEY='sUPerSeCuREKeY&^$^&$^%$^%7782348723t4872t34Ends'
+
+MONGO_URI='mongodb://localhost/User_Onboarding'
