--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "private": false,
   "engines": {
-    "node": "12.*"
+    "node": "16.*"
   },
   "scripts": {
     "start": "npx babel-node src/entry.js",
@@ -14,36 +14,32 @@
     "deployment": "node build/entry.js"
   },
   "dependencies": {
-    "@hapi/boom": "^9.1.2",
-    "@hapi/hapi": "^20.1.2",
-    "@hapi/inert": "^6.0.3",
-    "@hapi/vision": "^6.0.1",
-    "async": "^3.2.0",
-    "babel-node": "0.0.1-security",
-    "body-parser": "1.19.0",
-    "cfenv": "1.2.3",
-    "dotenv": "8.2.0",
-    "express": "4.17.1",
+    "@hapi/boom": "^9.1.4",
+    "@hapi/hapi": "^20.2.1",
+    "@hapi/inert": "^6.0.5",
+    "@hapi/vision": "^6.1.0",
+    "async": "^3.2.3",
+    "aws-sdk": "^2.1082.0",
+    "cfenv": "1.2.4",
+    "dotenv": "16.0.0",
+    "express": "4.17.3",
     "fluent-ffmpeg": "2.1.2",
     "fs": "0.0.1-security",
-    "fs-extra": "9.1.0",
+    "fs-extra": "10.0.1",
     "gm": "1.23.1",
     "handlebars": "^4.7.7",
     "hapi-auth-bearer-token": "8.0.0",
-    "hapi-swagger": "^14.1.0",
-    "ibm-cos-sdk": "1.10.0",
-    "joi": "^17.4.0",
+    "hapi-swagger": "^14.2.5",
+    "joi": "^17.6.0",
     "jsonwebtoken": "8.5.1",
-    "knox": "^0.9.2",
     "lodash": "^4.17.21",
-    "log4js": "6.3.0",
+    "log4js": "6.4.1",
+    "luxon": "^2.3.1",
     "md5": "2.3.0",
-    "moment": "2.29.1",
-    "mongoose": "^5.12.2",
+    "mongoose": "^6.2.3",
     "path": "0.12.7",
-    "randomstring": "1.1.5",
-    "socket.io": "^4.0.0",
-    "underscore": "1.12.1",
+    "randomstring": "1.2.2",
+    "socket.io": "^4.4.1",
     "validator": "13.5.2"
   },
   "author": "Sanchit Dang",
