--- a/.babelrc
+++ b/.babelrc
@@ -14,6 +14,12 @@
       {
         "loose": true
       }
+    ],
+    [
+      "@babel/plugin-proposal-private-property-in-object",
+      {
+        "loose": true
+      }
     ]
   ]
 }
